modified:   classique.html 	modified:   erotique.html 	modified:   index.html 	modified:   recherche.html 	modified:   tarif.html 	new file:   template.html

--- a/erotique.html
+++ b/erotique.html
@@ -92,6 +92,7 @@
 				<li><a href="index.html"><i class="bi bi-person navicon"></i>Nouveautés</a></li>
 				<li><a href="classique.html"><i class="bi bi-file-earmark-text navicon"></i>Classiques</a></li>
 				<li><a href="erotique.html" class="active"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
+				<li><a href="template.html"><i class="bi bi-images navicon"></i>Template</a></li>
 				<li><a href="recherche.html"><i class="bi bi-images navicon"></i>Recherche</a></li>
 				<li><a href="tarif.html"><i class="bi bi-images navicon"></i>Tarifs</a></li>
 			</ul>
