--- a/classique.html
+++ b/classique.html
@@ -92,6 +92,7 @@
                 <li><a href="classique.html" class="active"><i
                             class="bi bi-file-earmark-text navicon"></i>Classiques</a></li>
                 <li><a href="erotique.html"><i class="bi bi-envelope navicon"></i>Erotiques</a></li>
+                <li><a href="template.html"><i class="bi bi-images navicon"></i>Template</a></li>
                 <li><a href="recherche.html"><i class="bi bi-images navicon"></i>Recherche</a></li>
                 <li><a href="tarif.html"><i class="bi bi-images navicon"></i>Tarifs</a></li>
             </ul>
