modified:   css/main.css 	modified:   erotique.html 	new file:   images/pic5.jpeg new file:   images/pic55.jpeg 	modified:   index.html 	modified:   recherche.html

--- a/erotique.html
+++ b/erotique.html
@@ -220,6 +220,17 @@
 							data-pdf-url="https://drive.google.com/file/d/16-YTTV4g_w7jddojXNv3-5mtSS1snhA1/view">Ouvrir</a>
 					</div>
 				</div>
+
+				<!-- 10 -->
+				<div class="col-12 col-sm-6 col-md-4 col-lg-2 manga-item d-flex flex-column align-items-center"
+					data-id="4">
+					<img src="images/pic55.jpeg" class="card-img-top manga-cover" alt="LES AMIS DE MA FILLE">
+					<div class="card-body d-flex flex-column text-center">
+						<div class="manga-title">LES AMIS DE MA FILLE<br> EP 1</div>
+						<a href="lecteur.html" class="btn btn-custom mt-3 pdf-link"
+							data-pdf-url="https://drive.google.com/file/d/1DaOVeDM-fsyXGAwnwRYksJY4q4nn0Tij/view">Ouvrir</a>
+					</div>
+				</div>
 			</div>
 		</section>
 		<!-- Section Érotiques -->
