--- a/index.html
+++ b/index.html
@@ -126,6 +126,8 @@
                 <img src="images/Margarethe.png" alt="Margarethe" class="rectangle">
                 <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
                     class="rectangle">
+                <img src="images/pic55.jpeg" alt="ma brute" class="rectangle">
+                <img src="images/pic44.jpg" alt="ma brute" class="rectangle">
                 <img src="images/Partageuse de fesses s01.png" alt="Partageuse de fesses s01.png" class="rectangle">
                 <img src="images/ma brute.jpg" alt="ma brute" class="rectangle">
                 <img src="images/Cohabitation forcée.jpg" alt="ma brute" class="rectangle">
@@ -135,6 +137,7 @@
                 <img src="images/La Bourgeoise et le Nécessiteux.png" alt="La Bourgeoise et le Nécessiteux.png"
                     class="rectangle">
                 <img src="images/pic44.jpg" alt="ma brute" class="rectangle">
+                <img src="images/pic55.jpeg" alt="ma brute" class="rectangle">
             </div>
         </div>
 
@@ -146,7 +149,7 @@
             <!-- Image à gauche, Texte à droite -->
             <div class="content-pair ">
                 <div class="content-text">
-                    <h3>💋LES AMIS DE MA BELLE MÈRE VF (1-60)</h3>
+                    <h3>💋LES AMIS DE MA BELLE MÈRE VF (1-60) ep</h3>
                     <p> J'ai perdu ma mère quand j'étais jeune, elle nous a quittés, mon père et moi, pour vivre
                         ensemble. Mon père voulait soulager ma douleur, il m'a laissé vivre une vie sans souci. Puis,
                         soudain, un jour, mon père m'a présenté une jeune et belle femme qui s'est mariée parce qu'elle
@@ -158,7 +161,6 @@
             <div class="content-image">
                 <img src="images/pic3.jpg" alt="LES AMIS DE MA BELLE MÈRE">
             </div>
-
 
             <!-- Image à gauche, Texte à droite -->
             <div class="content-pair ">
@@ -172,9 +174,13 @@
                 </div>
             </div>
 
+            <div class="content-image">
+                <img src="images/pic5.jpeg" alt="LES AMIS DE MA FILLE">
+            </div>
+
             <div class="content-pair ">
                 <div class="content-text">
-                    <h3>LES AMIS DE MA FILLE (Bientot)</h3>
+                    <h3>LES AMIS DE MA FILLE 1- 17 ep</h3>
                     <p> Si-Hoon élève seul sa fille tout en vivant la vie d'une idole dans le passé et d'un compositeur
                         maintenant. Il parcourt accidentellement les SNS de sa fille et tombe amoureux de sa fille
                         idéale.
