--- a/recherche.html
+++ b/recherche.html
@@ -452,13 +452,84 @@
                 </div>
 
 
-                <!-- LES AMIS DE MA BELLE MÈRE ep 5 -->
+                <!-- MAIDENS IN LAW -->
                 <div class="manga-item" data-id="2">
                     <img src="images/pic44.jpg"
                         alt="Couverture de manga: MAIDENS IN LAW , style érotique avec des personnages en tenue légère"
                         class="manga-cover" class="manga-cover" class="manga-cover" />
                     <div class="manga-info">
                         <div class="manga-title">MAIDENS IN LAW <br> EP 6-30</div>
+                        <a class="btn btn-custom mt-3 pdf-sub" data-pdf-url="">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">LES AMIS DE MA FILLE<br> 1 </div>
+                        <a class="btn btn-custom mt-3 pdf-sub"
+                            data-pdf-url="https://drive.google.com/file/d/1DaOVeDM-fsyXGAwnwRYksJY4q4nn0Tij/view?">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">LES AMIS DE MA FILLE<br> 2 </div>
+                        <a class="btn btn-custom mt-3 pdf-sub"
+                            data-pdf-url="https://drive.google.com/file/d/1XUcdmOHCy0MqR043ZOT2rSJM_Y6M8YNn/view?">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">LES AMIS DE MA FILLE<br> 3 </div>
+                        <a class="btn btn-custom mt-3 pdf-sub"
+                            data-pdf-url="https://drive.google.com/file/d/1XLodGiDgsHqT-jYuoF1JMxizCxtAih6y/view?">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">LES AMIS DE MA FILLE<br> 4 </div>
+                        <a class="btn btn-custom mt-3 pdf-sub"
+                            data-pdf-url="https://drive.google.com/file/d/1KOkbC0iOw1H25F2TXVa6-SPVfZHZafFN/view">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE, style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title">LES AMIS DE MA FILLE<br> 5 </div>
+                        <a class="btn btn-custom mt-3 pdf-sub"
+                            data-pdf-url="https://drive.google.com/file/d/1bq5YGmGqre-cFtqSivCfUKwFKNX5obl3/view">Telecharger</a>
+                    </div>
+                </div>
+
+                <!-- LES AMIS DE MA FILLE -->
+                <div class="manga-item" data-id="2">
+                    <img src="images/pic55.jpeg"
+                        alt="Couverture de manga: LES AMIS DE MA FILLE , style érotique avec des personnages en tenue légère"
+                        class="manga-cover" class="manga-cover" class="manga-cover" />
+                    <div class="manga-info">
+                        <div class="manga-title"> LES AMIS DE MA FILLE <br> EP 6-17 </div>
                         <a class="btn btn-custom mt-3 pdf-sub" data-pdf-url="">Telecharger</a>
                     </div>
                 </div>
